<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2017 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.example.android.autofillframework.app.NavigationItem
            android:id="@+id/standardViewSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:infoText="@string/edittext_login_info"
            app:labelText="@string/navigation_button_edittext_login_label"
            app:itemLogo="@drawable/ic_edittexts_logo_24dp"
            app:imageColor="@android:color/holo_red_dark" />

        <com.example.android.autofillframework.app.NavigationItem
            android:id="@+id/standardLoginWithAutoCompleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:infoText="@string/autocomplete_login_info"
            app:labelText="@string/navigation_button_autocomplete_login_label"
            app:itemLogo="@drawable/ic_autocomplete_logo_24dp"
            app:imageColor="@android:color/holo_blue_dark"/>

        <com.example.android.autofillframework.app.NavigationItem
            android:id="@+id/virtualViewSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:infoText="@string/custom_virtual_login_info"
            app:labelText="@string/navigation_button_custom_virtual_view_login_label"
            app:itemLogo="@drawable/ic_custom_virtual_logo_24dp"
            app:imageColor="@android:color/holo_green_dark"/>

        <com.example.android.autofillframework.app.NavigationItem
            android:id="@+id/creditCardCheckoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:infoText="@string/spinners_credit_card_info"
            app:labelText="@string/navigation_button_spinners_credit_card_label"
            app:itemLogo="@drawable/ic_spinners_logo_24dp"
            app:imageColor="@android:color/holo_orange_dark"/>

        <com.example.android.autofillframework.app.NavigationItem
            android:id="@+id/emailComposeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:infoText="@string/email_compose_info"
            app:labelText="@string/navigation_button_email_compose_label"
            app:itemLogo="@drawable/ic_email_black_24dp"
            app:imageColor="@android:color/holo_purple"/>
        <com.example.android.autofillframework.app.NavigationItem
            android:id="@+id/creditCardCompoundViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:infoText="@string/compound_view_credit_card_info"
            app:labelText="@string/navigation_button_compound_view_credit_card_label"
            app:imageColor="@android:color/holo_blue_light"
            app:itemLogo="@drawable/ic_view_module_black_24dp" />

    </LinearLayout>
</ScrollView>